Adding the hero section

--- a/index.html
+++ b/index.html
@@ -19,5 +19,28 @@
         </ul>
       </nav>
     </header>
+
+    <section class="hero">
+      <div class="hero-text">
+        <h2>Do What excites.</h2>
+        <p>
+          Welcome to the realm of adrenaline-fueled adventures and awe-inspiring
+          journeys. Dive into the unknown, conquer the wilderness, and embrace
+          the thrill of the extraordinary with our exclusive expeditions and
+          heart-pounding escapades. Whether you seek the heights of mountains,
+          the depths of oceans, or the vastness of untouched landscapes, our
+          experiences will push your boundaries and redefine your sense of
+          adventure.
+        </p>
+        <button>Sign Up</button>
+      </div>
+      <div class="hero-img">
+        <img
+          loading="lazy"
+          src="./imgs/pexels-jacub-gomez-447561-1152044.jpg"
+          alt="hero-image"
+        />
+      </div>
+    </section>
   </body>
 </html>
