Added the info and footer sectoin

--- a/index.html
+++ b/index.html
@@ -42,5 +42,28 @@
         />
       </div>
     </section>
+
+    <section class="info">
+      <h2>Some of our Adventures</h2>
+      <div class="adventures">
+        <div class="ad">
+          <img src="./imgs/pexels-jahoo-382177.jpg" alt="" />
+        </div>
+        <div class="ad">
+          <img src="./imgs/pexels-nandhukumar-450441.jpg" alt="" />
+        </div>
+
+        <div class="ad">
+          <img src="./imgs/pexels-noellegracephotos-906094.jpg" alt="" />
+        </div>
+        <div class="ad">
+          <img src="./imgs/pexels-russ-jani-232796-739755.jpg" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <p>Copyright &copy; The odin Project 2024</p>
+    </footer>
   </body>
 </html>
