Added the quote and call to action sections

--- a/index.html
+++ b/index.html
@@ -62,6 +62,24 @@
       </div>
     </section>
 
+    <div class="quote">
+      <p>"You just gotta keep livin' man, L-I-V-I-N."</p>
+      <div class="by">- David wooderson, Dazed and Confused</div>
+    </div>
+
+    <div class="call-to-action">
+      <div class="board">
+        <div class="board-text">
+          <h3>Join us for an exciting life</h3>
+          <p>
+            SignUp for our membership by clicking the button on the right over
+            there!
+          </p>
+        </div>
+        <button>SignUp</button>
+      </div>
+    </div>
+
     <footer>
       <p>Copyright &copy; The odin Project 2024</p>
     </footer>
